--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MiApp"
         tools:targetApi="31">
-        <activity
-            android:name=".MainActivity"
+        <activity android:name=".LoginActivity"
             android:exported="true">
+            <!-- Definir la actividad de inicio como la principal -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <!-- Actividad de la Pantalla Principal (Administrador) -->
+        <activity android:name=".PrincipalAdminActivity">
+            <!-- Esta actividad no tiene <intent-filter> ya que no es la principal -->
         </activity>
     </application>
 
