--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,9 @@
         <activity android:name=".PrincipalAdminActivity">
             <!-- Esta actividad no tiene <intent-filter> ya que no es la principal -->
         </activity>
+        <activity android:name=".MainActivity">
+            <!-- Esta actividad no tiene <intent-filter> ya que no es la principal -->
+        </activity>
     </application>
 
 </manifest>
