Muestra detalle producto

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,9 @@
         <activity android:name=".PrincipalEmpleadoActivity">
             <!-- Esta actividad no tiene <intent-filter> ya que no es la principal -->
         </activity>
+        <activity android:name=".DetalleProductoActivity">
+            <!-- Esta actividad no tiene <intent-filter> ya que no es la principal -->
+        </activity>
     </application>
 
 </manifest>
